Images + HTML + CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apprendre French</title>
+    <title>Projet Summer Camp - Nour Malek</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header>
+        <img src="https://via.placeholder.com/150x80?text=Summer+Camp+Logo" alt="Summer Camp Logo" class="logo">
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="video-container">
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/FVFHi-tuq9o" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="welcome-text">
+                <h1>Salut tout le monde!</h1>
+                <p>C'est moi Nour Malek. J'ai créé ce site web pour vous partager ce que j'ai appris dans le summer camp! Découvrez vous allez trouver plus de détails. À bientôt!</p>
+            </div>
+        </section>
+
+        <section class="content-boxes">
+            <h2>Ce que j'ai appris</h2>
+            <div class="boxes-container">
+                <a href="cours-labed.html" class="content-box">
+                    <h3>Cours de Madame Labed Nada</h3>
+                    <p>Découvrez les leçons importantes enseignées par notre professeur.</p>
+                </a>
+                <a href="differences.html" class="content-box">
+                    <h3>Différences entre "..." et "..."</h3>
+                    <p>Les subtilités de la langue française expliquées.</p>
+                </a>
+                <a href="vocabulaire.html" class="content-box">
+                    <h3>Vocabulaire et expressions idiomatiques</h3>
+                    <p>Les mots et expressions utiles à connaître.</p>
+                </a>
+                <a href="malentendus.html" class="content-box">
+                    <h3>Les malentendus!</h3>
+                    <p>Les erreurs courantes et comment les éviter.</p>
+                </a>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Summer Camp Project - Nour Malek</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
