--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- first Section: Services Section -->
     <section id="services-section">
         <div class="services-content">
-        <div class="service-box" onclick="window.location.href='vocabulaire.html'">
+        <div class="service-box" onclick="window.location.href='../French-Summer-Camp-project-/HTML/vocabulaire.html'">
                 <h3>Announcements</h3>
                 <p>Stay updated with the latest news, events, and job openings.</p>
             </div>
