--- a/HTML/expressions-idiomatiques.html
+++ b/HTML/expressions-idiomatiques.html
@@ -20,10 +20,11 @@
       </label>
       <ul class="nav-links">
         <li><a href="../index.html">Acceuil</a></li>
-        <li><a href="language.html">Language <br>et registres</a></li>
+        
         <li><a href="expressions-idiomatiques.html">Expressions <br> idiomatiques</a></li>
         <li><a href="prononciation.html">Prononciation <br>et fluidité</a></li>
         <li><a href="grammaire.html">Grammaire <br> et précision</a></li>
+        <li><a href="orale.html">Compréhension orale <br> audiovisuelle</a></li>
         <li><a href="vocabulaire.html">Vocabulaire <br> thématique</a></li>
       </ul>
     </nav>
@@ -301,7 +302,7 @@ Dans cette section, tu trouveras des expressions classées par thèmes : couleur
                 </div>
             </div>
         <div class="acc-card">
-                <img src="https://lh3.googleusercontent.com/proxy/7L-OQO4kHHAazFVTBurycicIfXIsSBNY9jmqBpNjkXjYfmiWg5DHhQGwKM8CKslPtlo1oZmqGVbI1tqV6FpiitiFd4oVFvAW" alt="">
+                <img src="https://media.istockphoto.com/id/476806623/photo/audience-cheering-in-theater.jpg?s=612x612&w=0&k=20&c=t2GoeNY4kK5g2-sVd8W5G0dPLNrQnhBz8GrZH0hXLSE=" alt="">
                 <div class="acc-card-content">
                 <h3> Faire un malheur</h3>
                 <p><b>Sens:</b> Avoir beaucoup de succès, plaire énormément.
@@ -605,6 +606,8 @@ Dans cette section, tu trouveras des expressions classées par thèmes : couleur
     </section>
     
 </main>
-
+<footer style="text-align: center; padding: 10px; background-color: white; font-size: 14px;">
+    Apprendre French &copy; 2025  
+</footer>
 </body>
 </html>
