--- a/HTML/grammaire.html
+++ b/HTML/grammaire.html
@@ -336,6 +336,7 @@ Il est vraiment difficile de trouver un travail aujourd’hui.</p>
             <p><b>À peine</b>, <b>Un peu</b></p>
             <p>Il a à peine parlé.</p>
             <p>Elle est un peu fatiguée.</p>
+            <p>On a à peine compris le cours.</p>
         </div>
     </div>
 
@@ -346,6 +347,7 @@ Il est vraiment difficile de trouver un travail aujourd’hui.</p>
             <h3>Faible</h3>
             <p><b>Légèrement</b></p>
             <p>Il est légèrement blessé.</p>
+            <p>Elle est légèrement en retard
         </div>
     </div>
 
@@ -367,6 +369,7 @@ Il est vraiment difficile de trouver un travail aujourd’hui.</p>
             <h3>Fort</h3>
             <p><b>Très</b></p>
             <p>Il est très intelligent.</p>
+            <p>Je suis très saoulée.</p>
         </div>
     </div>
 
